...

    var displayName: String {
        switch self {
        case .dough: "Dough"
        case .sauce: "Sauce"
        case .cheese: "Cheese"
        case .pepperoni: "Pepperoni"
        case .mushroom: "Mushroom"
        case .olive: "Olive"
        }
    }

    var symbolName: String {
        switch self {
...
